--- a/CSS/IndexCSS.css
+++ b/CSS/IndexCSS.css
@@ -4,22 +4,40 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 150px;
-    align-items: center;
-
+    text-align: center;
 }
 
 .logo {
-    height: 10%;
-    width: 10%;
+    height: 13%;
+    width: 13%;
 }
 
+.fondoNavigation {
+    background-color: #042A2B;
+    height: 50%;
+}
+
+@media only screen and (min-width: 750px) {
 .navigation {
     overflow: hidden;
-    background-color: #042A2B;
     font-family: 'Secular One';
     width: 100%;
-    border: 3px solid #CDEDF6;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding-left: 25%;
+}
+}
+
+@media only screen and (max-width: 750px) {
+.navigation {
+    overflow: hidden;
+    font-family: 'Secular One';
+    width: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
 }
 
 .navigation a {
@@ -27,7 +45,7 @@
     font-size: 15px;
     color : #CDEDF6;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1% 2%;
     text-decoration: none;
 }
 
@@ -39,15 +57,14 @@
 .navigation ul li {
     width: 20%;
     width: calc(100% / 5);
+    text-align: center;
 }
 
 .navigation * {
     display: inline;
 }
 
-.navigation li {
-    margin: 30px;
-}
+
 
 
 
