--- a/CSS/IndexCSS.css
+++ b/CSS/IndexCSS.css
@@ -12,57 +12,34 @@ header{
     width: 200px;
 }
 
-.fondoNavigation {
-    background-color: #042A2B;
-    height: 50%;
-}
-
-@media only screen and (min-width: 750px) {
-.navigation {
-    overflow: hidden;
+.navbar {
     font-family: 'Secular One';
     width: 100%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    padding-left: 26%;
-}
+    background-color: #042A2B;
+    overflow: auto;
 }
 
-@media only screen and (max-width: 750px) {
-    .navigation {
-        overflow: hidden;
-        font-family: 'Secular One';
-        width: 100%;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        padding-left: 15%;
-    }
-}
-
-.navigation a {
+.navbar a {
     float: left;
-    font-size: 15px;
-    color : #CDEDF6;
-    text-align: center;
-    padding: 1% 2%;
+    padding: 12px;
+    color: white;
     text-decoration: none;
+    font-size: 15px;
 }
 
-.navigation a:hover {
-    background-color: #094446;
-    transform: scale(1.1) perspective(1px);
+.navbar a:hover {
+    background-color: #5EB1BF;
+}  
+
+.active {
+    background-color: #5EB1BF;
 }
 
-.navigation ul li {
-    width: 20%;
-    width: calc(100% / 5);
-    text-align: center;
-}
-
-.navigation * {
-    display: inline;
+@media screen and (max-width: 500px) {
+    .navbar a {
+        float: none;
+        display: block;
+    }
 }
 
 /* FOOTER */
