--- a/CSS/IndexCSS.css
+++ b/CSS/IndexCSS.css
@@ -41,14 +41,21 @@ header{
         display: block;
     }
 }
+/* ORRIALDEAREN MAMIA */
+    /* KOLOREA */
+    section{
+      background-color: #CDEDF6;
+      padding-top: 1%;
+    }
 
 /* SLIDER */
 .slider {
+    
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     margin-top: 26px;
-    width: 80%;
-    margin-left: 10%;
+    width: 60%;
+    margin-left: 20%;
 }
 
 .sliderInner {
@@ -160,6 +167,40 @@ header{
     z-index: 9999;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
 }
+/* ARTIKULUAK */
+    /* Flex bitartez ordenatuko dugu atal hau */
+    .articulos{
+        display:flex;
+        width: 90%;
+        margin-top: 26px;
+        margin-left: 5%;
+        text-align: inherit;
+        font-family: 'Helvetica';
+        padding-bottom: 4%;
+        
+
+    }
+    .articulo1{
+        
+        width: 100%;
+        height: 100%;
+       
+        background-color: white;
+        padding: 2%;
+    }
+    .articulo2{
+        width: 100%;
+        height:100%;
+        margin-left: 10%;
+        
+        background-color:white;
+        padding: 2%;
+    }
+    .articulo1 h1 , .articulo2 h1{color: #5eb2bf;}
+    .articulo1 p , .articulo2 p{font-style: normal;}
+    .articulo2 li{margin-top: 3%;}
+    .articulo1 p{text-indent: 10%;}
+
 
 /* FOOTER */
 .footer {
