--- a/CSS/ArtikuluakCSS.css
+++ b/CSS/ArtikuluakCSS.css
@@ -41,7 +41,7 @@ header{
     background-color: #5EB1BF;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
     .navbar a {
         float: none;
         display: block;
@@ -54,46 +54,52 @@ section{
     padding-top: 1%;
 }
 
-/* SideNav */
-.sidenav {
-    margin-top: 26px;
-    float: right;
-    height: auto;
-    width: 160px;
-    font-family: 'Secular One';
-    background-color: #042A2B;
-    overflow-x: hidden;
+/* Artikuluak aukeratu*/
+
+.center { /*Centrar los botones en la mitad de la pagina*/
+    text-align: center;
+    margin-top: 2%;
+    
 }
 
-.sidenav a {
-    padding: 6px 8px 6px 12px;
-    text-decoration: none;
-    font-size: 17px;
+.pagination {
+    display: inline-block;
+    margin-bottom: 1cm;   
+}
+
+.pagination a {
+    background-color: #5EB1BF;
     color: white;
-    display: block;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    margin: 0 4px;
+    
+}  
+
+.pagination a.active {
+    background-color: #042A2B;
+    color: white;
 }
 
-.sidenav a:hover {
-    background-color: #094446;
-    transform: scale(1.1) perspective(1px);
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
 }
 
-.main {
-    margin-left: 160px; /* Same as the width of the sidenav */
-    font-size: 17px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
+@media screen and (max-width: 650px) {
+    .pagination a {
+        float: none;
+        display: block;
+    }
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 17%;}
-    .sidenav a {font-size: 17px;}
-}
 /* Artikuluak */
 .articulos{
-    display:flex;
-    width: 85%;
+    display: flex;
+    width: 90%;
     margin-top: 26px;
-    margin-left: 2%;
+    margin-left: 5%;
     text-align: inherit;
     font-family: 'Helvetica';
     padding-bottom: 4%;
@@ -104,26 +110,11 @@ section{
     background-color: white;
     padding: 2%;
 }
-.articulo2{
-    width: 100%;
-    height: 100%;   
-    background-color: white;
-    padding: 2%;
-}
 
 .articulo1 h1 , h1{color: #5eb2bf;}
 .articulo1 p , p{font-style: normal;}
 .articulo1 p{text-indent: 10%;}
 
-.articulo2 h1 , h1{color: #5eb2bf;}
-.articulo2 p , p{font-style: normal;}
-.articulo2 p{text-indent: 10%;}
-
-@media screen and (max-width: 900px) {
-    div.articulos {
-        font-size: 50%;
-    }
-}
 /* Footer de la pagina */  
 footer{
     
@@ -133,12 +124,11 @@ footer{
     bottom: 0;
     width: 100%;
     height: 170px;
-    
-    
 } 
+
 /* parte 1 */
 .footerP1{
-    
+    background-color:  #042A2B;;
     color: #d4f6ff;
     align-items: center;
     text-align: center;
@@ -148,13 +138,11 @@ footer{
     padding-right: 5%;
     padding-left: 1%;
     vertical-align: middle;
-    
 }
 .footerP1 img{
     vertical-align:middle;
     width: 40px;
 }
-
 
 /* parte 2 */
 .footerP2{
@@ -162,4 +150,11 @@ footer{
     background-color:  #042A2B;;
     color: #d4f6ff;
     padding-bottom: 1%;
+}
+
+@media screen and (max-width: 650px) {
+    footer a {
+        float: none;
+        display: block;
+    }
 }
