--- a/CSS/GalderakCSS.css
+++ b/CSS/GalderakCSS.css
@@ -7,16 +7,14 @@ section{
     grid-template-rows: 90% 15%;
     grid-template-areas: 
     'main'
-    'botoiak'
-    ;
+    'botoiak';
     padding-bottom: 24%;
-    min-height: 50%;
-    
+    min-height: 50%;  
 }
 
  /* Flex bitartez ordenatuko dugu atal hau */
 
- .main{
+.main{
     grid-area: 'main';
     display:flex;
     width: 50%;
@@ -26,8 +24,6 @@ section{
     font-family: 'Helvetica';
     background-color: white;
     padding-bottom: 5%;
-    
-
 }
 .galdera{
     width: 100%;
@@ -49,35 +45,25 @@ section{
 
 
 /* Aurreko eta atzeko botoien estilua */
-.botoiak{
-    
+.botoiak{  
     margin-left: 25%;
     grid-area: 'botoiak';
     width: 50%;
     background-color: white;
-    padding-bottom: 2%;
-    
+    padding-bottom: 2%; 
 }
 p .botonSiguiente{
     float:right;
-   width: 7%;
-   height: 7%;
-   margin-right: 4%;
-   min-width: 30px;
-   
-  
-   
+    width: 7%;
+    height: 7%;
+    margin-right: 4%;
+    min-width: 30px;
 }
-   
 
 p .botonAnterior{
     float: left;
-   width: 7%;
-   height: 7%;
-  margin-left: 4%;
-  min-width: 30px;
-   
-
-   
-  
+    width: 7%;
+    height: 7%;
+    margin-left: 4%;
+    min-width: 30px;
 } 
