--- a/CSS/GalderakCSS.css
+++ b/CSS/GalderakCSS.css
@@ -1,16 +1,37 @@
+html{font-family: 'Secular One';}
+/* HEADER */
+
+@media screen and (max-width: 500px) {
+    .content{
+    
+      padding-bottom: 30%;
+    }
+}
+@media screen and (min-width: 500px) {
+    .content{
+      
+      padding-bottom: 10%;
+    }
+}
+
 /* web orriaren mamiari estiloa emango diogu */
     /* Gridsekin ordenatuko dugu */
 section{
+    width: 50%;
+    margin-left: 25%;
+    font-family: 'Open Sans', sans-serif;
     margin-top: 5%;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 90% 15%;
+    grid-template-rows: 95% 15%;
     grid-template-areas: 
     'main'
     'botoiak'
     ;
-    padding-bottom: 24%;
-    min-height: 50%;
+    background-color: white;
+    padding-bottom: 10%;
+    /* min-width: 550px; */
+   
     
 }
 
@@ -18,66 +39,80 @@ section{
 
  .main{
     grid-area: 'main';
-    display:flex;
-    width: 50%;
-    margin-top: 10px;
-    margin-left: 25%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 25% 50%;
+    grid-template-areas: 
+    'galdera'
+    'erantzuna'
+    ;
+    width: 100%;
+    height: 100%;
     text-align: inherit;
     font-family: 'Helvetica';
     background-color: white;
-    padding-bottom: 5%;
+    
+    
+
     
 
 }
 .galdera{
-    width: 100%;
-    background-color: white;
-    padding: 3%;
-    float: left;
+    grid-area: 'galdera';
+    width: 90%;
+    margin-left: 3%;
+    padding-top: 3%;
+
+    
 }
 
 .erantzuna{
-    width: 100%;
-    float: right;
-    background-color: white;
-    padding: 3%;
+    grid-area: 'erantzuna';
+    width: 92%;
+    padding-top: 3%;
+    margin-left: 3%;
+   
 }
-.articulo1 h1 , .articulo2 h1{color: #5eb2bf;}
-.articulo1 p , .articulo2 p{font-style: normal;}
-.articulo2 li{margin-top: 3%;}
-.articulo1 p{text-indent: 10%;}
+.galdera h1 , .erantzuna h1{color: #5EB1BF; font-size: 25px;}
+.galdera p , .erantzuna p{font-style: normal;}
+.galdera li{margin-top: 3%;}
+.galdera1 p{text-indent: 10%;}
 
 
 /* Aurreko eta atzeko botoien estilua */
 .botoiak{
     
-    margin-left: 25%;
+    
     grid-area: 'botoiak';
-    width: 50%;
-    background-color: white;
+    width: 100%;
+    height:100%;
+    background-color:white;
     padding-bottom: 2%;
+    min-width: 50%;
+    margin-top: 10%;
+   
+    
     
 }
-p .botonSiguiente{
+a .botonSiguiente{
     float:right;
    width: 7%;
-   height: 7%;
+   height: 60%;
    margin-right: 4%;
-   min-width: 30px;
-   
+   min-width: 50px;
+   max-width: 60px;
+   margin-top: 3%;
   
    
 }
    
 
-p .botonAnterior{
-    float: left;
-   width: 7%;
-   height: 7%;
+a .botonAnterior{
+  float: left;
+  width: 7%;
+  height: 60%;
   margin-left: 4%;
-  min-width: 30px;
-   
-
-   
-  
+  min-width: 50px;
+  max-width: 60px;
+  margin-top: 3%;
 } 
