comentarios en css bistaratuenak

--- a/CSS/BistaratuenakCSS.css
+++ b/CSS/BistaratuenakCSS.css
@@ -46,7 +46,7 @@ header{
         display: block;
     }
 }
-
+/*Horrialde bakoitzera joateko botoiak*/
 .biBotoiak {
     padding: 5%;
     align-items: center;
