--- a/CSS/ArtikuluakCSS.css
+++ b/CSS/ArtikuluakCSS.css
@@ -117,6 +117,7 @@ section{
 .articulo1 h4{padding-left: 5%;}
 .articulo1 p , p{font-style: normal;}
 .articulo1 p{padding-left: 10%;}
+.articulo1 img{padding-left: 10%;}
 
 /* Footer de la pagina */  
 footer{
