--- a/CSS/ArtikuluakCSS.css
+++ b/CSS/ArtikuluakCSS.css
@@ -157,15 +157,40 @@ p > a {
     margin-top: -7%;
 }
 
+/* Kodigo zatiak */
+pre {
+    background: #042A2B;
+    color: #f1f1f1;
+    padding: 8px 12px;
+    border-radius:3px;
+    border-top: 5px solid #5FB1BF;
+    -moz-box-shadow: inset 0 0 10px #000;
+    box-shadow: inset 0 0 10px #000;
+    counter-reset: line;
+}
+
+pre span {
+    display: block;
+    line-height: .5rem;
+}
+
+pre span:before {
+      counter-increment: line;
+      content: counter(line);
+      display: inline-block;
+      border-right: 1px solid #ddd;
+      padding: 0 .5em;
+      margin-right: .5em;
+      color: #cdedf6;
+}
+
 
 /* Footer de la pagina */  
 footer{
-    
     background: #042A2B;
     color: #CDEDF6;
     position: relative;
     bottom: 0;
-    width: 100%;
     height: 170px;
 } 
 
